tests/dev_and_build/errors/js_export_missing/client/main.js
// eslint-disable-next-line import-x/named
import { answer } from "./file.js";

console.log(answer);
